/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Main.java to edit this template
 */
package checkersgame;

import checkersgame.Controller.MenuController;

public class CheckersGame {

    /**
     * @param args the command line arguments
     */
    public static void main(String[] args)
    {
        new MenuController();
    }
}
