package checkersgame.Model;

/**
 * @author bradl
 */
public enum Colour {
    RED,
    BLACK;

}
