package checkersgame.Model;

/**
 * @author kishanyugendran
 */
public enum Rank {
    KING,
    PAWN
}
